--- a/html/hotel.html
+++ b/html/hotel.html
@@ -14,7 +14,7 @@
         <img src="../imgs/logo.png" href="index.html" />
     </div>
     <div id="nav">
-        Owlspedagem PET-SI - Resursos Humanos
+        Owlspedagem PET-SI - Hoteis
     </div>
     <div class="navbar">
         <div class="dropdown">
@@ -76,4 +76,4 @@
     </div>
 </footer>
 
-</html>
+</html>l>
