--- a/html/pousada.html
+++ b/html/pousada.html
@@ -14,7 +14,7 @@
         <img src="../imgs/logo.png" href="index.html" />
     </div>
     <div id="nav">
-        Owlspedagem PET-SI - Resursos Humanos
+        Owlspedagem PET-SI - Pousadas
     </div>
     <div class="navbar">
         <div class="dropdown">
