--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
     <div class="textocentro">
         <h1>Confirme as credenciais para login</h1>
     </div>
-    <form class="form">
+    <form class="form" action="html/hotel.html">
         <input class="user" type="text" placeholder="Usuário">
         <br>
         <input class="senha" type="password" placeholder="Senha">
         <br>
-        <input class="login-button" type="submit" value="Login">
+        <input  class="login-button" type="submit" value="Login">
     </form>
     </body>
 
