inserção de cliente funcionando, mudanças no header

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <nav>
     <div class="logo">
-        <img src="./imgs/logo.png" href="index.html" />
+        <img src="./imgs/logo.png" href="index.php" />
     </div>
     <div id="nav">
         Owlspedagem PET-SI
@@ -21,7 +21,7 @@
     <div class="textocentro">
         <h1>Confirme as credenciais para login</h1>
     </div>
-    <form class="form" action="html/hotel.html">
+    <form class="form" action="html/hotel.php">
         <input class="user" type="text" placeholder="Usuário">
         <br>
         <input class="senha" type="password" placeholder="Senha">
